--- a/app/styles/custom-style.css
+++ b/app/styles/custom-style.css
@@ -1,9 +1,6 @@
 /*
 * Custom Styles
 */
-html{
-    overflow: -moz-scrollbars-none;
-}
 
 body {
 	/*font-family: trebuchet ms, Calibri, sans-serif;*/
@@ -114,8 +111,10 @@ ul li {
 }
 
 
-
-
+.chartContainer{
+	width: 80%;
+	margin: 5% 10% 0 10%;
+}
 
 
 
