--- a/app/styles/media.css
+++ b/app/styles/media.css
@@ -1,7 +1,16 @@
 
 
+@media screen and (max-width: 1200px){
+	.backgroundHome{
+		height: 98% !important;
+	}
+}
+
 @media screen and (max-width: 517px){
 
+	.backgroundHome{
+		height: 98.5% !important;
+	}
 	.nav-topmost{
 		height: 97px !important;
 	}
@@ -21,7 +30,7 @@
 	}
 }
 
-@media screen and (max-width: 436px){
+@media screen and (max-width: 440px){
 
 	#aboutId{
 		left: 0;
@@ -30,5 +39,12 @@
 	#contactId{
 		top: 0;
 	    position: relative;
+	}
+}
+
+@media screen and (max-width: 360px){
+
+	.nav > li > a{
+		padding: 10px 4px;
 	}
 }
