--- a/app/views/chart.html
+++ b/app/views/chart.html
@@ -1,4 +1,13 @@
 
-<div>
-	<d3-bars data="d3Data"></d3-bars>
+<div class="chartContainer">
+	<div class="jumbotron">
+		<d3-bars data="d3Data" class="chart"></d3-bars>
+	</div>
+	<div class="jumbotron" style="width:49.2%; display:inline-block">
+		<d3-bars data="d3Data" class="chart"></d3-bars>
+	</div>
+	<div class="jumbotron" style="width:49.2%; display:inline-block">
+		<d3-bars data="d3Data" class="chart"></d3-bars>
+	</div>
+
 </div>
