--- a/app/styles/custom-style.css
+++ b/app/styles/custom-style.css
@@ -117,6 +117,6 @@ ul li {
 }
 
 
-.jumbotron .h1, .jumbotron h1, .jumbotron p {
+.jumbotron h1, .jumbotron h2, .jumbotron p {
     text-align: center;
 }
